--- a/client/views/common/header.html
+++ b/client/views/common/header.html
@@ -4,6 +4,8 @@
     <ul>
       <li><a href="{{pathFor 'homepage'}}">Homepage</a></li>
       <li><a href="{{pathFor 'items'}}">Items</a></li>
+      <li><a href="/404">404 Link</a></li>
     </ul>
   </div>
+  <hr/>
 </template>
