--- a/client/views/common/footer.html
+++ b/client/views/common/footer.html
@@ -1,5 +1,6 @@
 <template name="footer">
+  <hr/>
   <div class="footer">
-    This is the footer.
+    This is the footer. {{myHelper "handsome!"}}
   </div>
 </template>
