bootstrap alert message with route lifespan

--- a/client/views/common/header.html
+++ b/client/views/common/header.html
@@ -21,9 +21,5 @@
     </div>
   </header>
   <hr/>
-  <div class="messages">
-    {{#each messages}}
-      <p class="message message-{{type}}">{{message}}</p>
-    {{/each}}
-  </div>
+  {{> alerts}}
 </template>
