--- a/client/views/common/header.html
+++ b/client/views/common/header.html
@@ -1,25 +1,31 @@
 <template name="header">
-  <header class="navbar">
-    <div class="navbar-inner">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="{{pathFor 'homepage'}}">Void</a>
-      <div class="nav-collapse collapse">
-        <ul class="nav">
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+      
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{{pathFor 'homepage'}}">Void</a>
+      </div>
+      
+      <div class="collapse navbar-collapse" id="main-navbar-collapse">
+        <ul class="nav navbar-nav">
           <li class="{{activeRouteClass 'homepage'}}"><a href="{{pathFor 'homepage'}}">Homepage</a></li>
           <li class="{{activeRouteClass 'content'}}"><a href="{{pathFor 'content'}}">Content page</a></li>
           <li class="{{activeRouteClass 'items'}}"><a href="{{pathFor 'items'}}">Items</a></li>
-          <li><a href="/404">404 Link</a></li>
         </ul>
-        <ul class="nav pull-right">
-          <li>{{loginButtons}}</li>
+        <ul class="nav navbar-nav navbar-right">
+          {{loginButtons}}
         </ul>
-      </div>
-    </div>
-  </header>
+
+      </div> <!-- /.navbar-collapse -->
+    </div> <!-- /.container-fluid -->
+  </nav>
+  
   <hr/>
   {{> alerts}}
 </template>
